# std-config

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.txt
docs/: pydantic-concepts-fields.md  pydantic-concepts-fields.txt  pydantic-settings.md  pydantic-settings.txt
examples/: __init__.py  generate_docs.py  schema_doc_example.py
src/std_config/: __init__.py  __main__.py  ai_config.py  config.py  exceptions.py  schema_doc.py
steps/: development_steps.md
tests/: test_config.py  test_schema_doc.py
